// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TitleDescriptionBox /> renders TitleDescriptionBox 1`] = `
<div
  className="mfui-title-description-box mfui-title-description-box_h-align_center mfui-title-description-box_text-color_white custom class"
  data-test="value"
>
  <Grid
    hAlign="center"
  >
    <GridColumn
      desktop="10"
      wide="8"
    >
      <Header
        as="h2"
        className="mfui-title-description-box__item mfui-title-description-box__item_header"
        color="inherit"
        hAlign="inherit"
      >
        title
      </Header>
      <Paragraph
        className="mfui-title-description-box__item"
        color="inherit"
        hasMargin={false}
      >
        description
      </Paragraph>
    </GridColumn>
  </Grid>
</div>
`;

exports[`<TitleDescriptionBox /> renders TitleDescriptionBox without description 1`] = `
<div
  className="mfui-title-description-box mfui-title-description-box_h-align_center mfui-title-description-box_text-color_white custom class"
  data-test="value"
>
  <Grid
    hAlign="center"
  >
    <GridColumn
      desktop="10"
      wide="8"
    >
      <Header
        as="h2"
        className="mfui-title-description-box__item mfui-title-description-box__item_header"
        color="inherit"
        hAlign="inherit"
      >
        title
      </Header>
    </GridColumn>
  </Grid>
</div>
`;

exports[`<TitleDescriptionBox /> renders TitleDescriptionBox without title 1`] = `
<div
  className="mfui-title-description-box mfui-title-description-box_h-align_center mfui-title-description-box_text-color_white custom class"
  data-test="value"
>
  <Grid
    hAlign="center"
  >
    <GridColumn
      desktop="10"
      wide="8"
    >
      <Paragraph
        className="mfui-title-description-box__item"
        color="inherit"
        hasMargin={false}
      >
        description
      </Paragraph>
    </GridColumn>
  </Grid>
</div>
`;

exports[`<TitleDescriptionBox /> renders with components in description field 1`] = `
<div
  className="mfui-title-description-box mfui-title-description-box_h-align_center mfui-title-description-box_text-color_white custom class"
  data-test="value"
>
  <Grid
    hAlign="center"
  >
    <GridColumn
      desktop="10"
      wide="8"
    >
      <Header
        as="h2"
        className="mfui-title-description-box__item mfui-title-description-box__item_header"
        color="inherit"
        hAlign="inherit"
      >
        title
      </Header>
      <div
        className="mfui-title-description-box__description"
      >
        <div
          key="0"
        >
          Test node render
        </div>
      </div>
    </GridColumn>
  </Grid>
</div>
`;
